# thesis

./: .gitignore  README.md  cap_reserve_margin.jl  diurnal_generation.py  package-lock.json  pyproject.toml  utils.py  write_demand_response.jl
genx_tested_agent/: .env.example  .gitignore  .mcp.json.example  README.md  capacity_cost.py  diurnal.py  plot_capacity.py  requirements.txt  run_server.sh  server.py  slurm.py
mcp/: .env.example  .gitignore  config.py  requirements.txt  server.py
mcp/tools/: analytics.py  cases.py  slurm.py
mcp_agent/: run_server.sh  server.py
